# Fraxinus

./: .gitignore  README.md
Fraxinus/org.custusx.fraxinus/: CMakeLists.txt
Fraxinus/org.custusx.fraxinus/Fraxinus/: CMakeLists.txt  CustusX.rc
Fraxinus/script/: cxFraxinusInstaller.py
Fraxinus/script/setup/: cxCustusXFinder.py  cxPrivateComponents.py  cxUpdateToLatestCustusX.py
config/profiles/: generic_settings.ini
config/profiles/Bronchoscopy/settings/: settings.ini
doc/: License.txt
doc/install_text/: install_readme.rtf  install_welcome.txt
doc/user_manual/: Fraxinus_doc_mainpage.md  fx_license.md  fx_user_manual.md
org.custusx.fraxinus/: CMakeLists.txt
org.custusx.fraxinus.core.state/: CMakeLists.txt  cxApplicationsParser.cpp  cxApplicationsParser.h  cxFraxinusSegmentations.cpp  cxFraxinusSegmentations.h  cxFraxinusState.qrc  cxFraxinusWorkflowStateMachine.cpp  cxFraxinusWorkflowStateMachine.h  cxFraxinusWorkflowStates.cpp  cxFraxinusWorkflowStates.h  cxFraxinusWorkflowStatesNavigation.cpp  cxFraxinusWorkflowStatesNavigation.h  cxNewLoadPatientDialog.cpp  cxNewLoadPatientDialog.h  cxStatePluginActivator.h  cxStateServiceImpl.cpp  cxStateServiceImpl.h  cxVBCameraZoomSetting3D.cpp  cxVBCameraZoomSetting3D.h
org.custusx.fraxinus.core.state/testing/: CMakeLists.txt  cxtestExportDummyClassForLinkingOnWindowsInLibWithoutExportedClass.cpp  cxtestFraxinusSegmentation.cpp
org.custusx.fraxinus.widgets/: CMakeLists.txt  cxFraxinusNavigationWidget.cpp  cxFraxinusNavigationWidget.h  cxFraxinusPatientOrientationWidget.cpp  cxFraxinusPatientOrientationWidget.h  cxFraxinusRegistrationWidget.cpp  cxFraxinusRegistrationWidget.h  cxFraxinusRobotWidget.h  cxFraxinusSimulatorWidget.h  cxFraxinusTrackingWidget.cpp  cxFraxinusTrackingWidget.h  cxFraxinusVBWidget.cpp  cxFraxinusVBWidget.h  cxFraxinusVideoGeneratorWidget.cpp  cxFraxinusVideoGeneratorWidget.h  cxFraxinusWidgets.qrc  cxFraxinusWidgetsGUIExtenderService.cpp  cxFraxinusWidgetsGUIExtenderService.h  cxFraxinusWidgetsPluginActivator.cpp  cxFraxinusWidgetsPluginActivator.h  cxLungsRTTWidget.cpp  cxLungsRTTWidget.h  cxLungsTSFWidget.cpp  cxLungsTSFWidget.h  cxNewLoadPatientWidget.cpp  cxNewLoadPatientWidget.h  cxPinpointWidget.cpp  cxPinpointWidget.h  cxProcedurePlanningWidget.cpp  cxProcedurePlanningWidget.h  cxStructuresSelectionWidget.cpp  cxStructuresSelectionWidget.h  cxViewSelectionWidget.cpp  cxViewSelectionWidget.h
org.custusx.fraxinus/Fraxinus/: CMakeLists.txt  CustusX.rc  Fraxinus.rc  cxFraxinusMainWindow.cpp  cxFraxinusMainWindow.h  cxFraxinusMainWindowApplicationComponent.cpp  cxFraxinusMainWindowApplicationComponent.h  cxMain.cpp  cxfraxinus.qrc
org.custusx.fraxinus/Fraxinus/icons/: CreateICNS.src  Fraxinus.icns  Fraxinus2.icns
script/: cxFraxinusInstaller.py  cxFraxinusPrivateInstaller.py  cxJenkinsMasterBuildScript.py  cxJenkins_job_step.py  cxJenkins_private_job_step.py  cxOpenSourceMasterBuildScript.py
script/cxsetup/: cxCustusXFinder.py  cxFindCustusX.py  cxPrivateComponentAssembly.py  cxPrivateComponents.py  cxPublicComponentAssembly.py  cxRepoHandler.py  cxUpdateToLatestCustusX.py
script/setup/: cxCustusXFinder.py  cxPrivateComponentAssembly.py  cxPrivateComponents.py
script/utilities/: icons.sh
tool/Tools/Bronchoscopy/Bronchoscope/: Bronchoscope_AURORA_port2.xml
tool/Tools/Bronchoscopy/EBUS Bronchoscope/: EBUS_Bronchoscope_AURORA_port2.xml  EBUS_Bronchoscope_AURORA_port4.xml  EBUS__20150623T152214.cal
tool/Tools/Shared/11L-Probe-32-105-0289_VividE9_POLARIS/: E9_prb_11L.xml  VividE9_11L__20140114T151115.cal  Vivid_E9_11L_20111103T152137_calibrated.cal  Vivid_E9_11L_20130109T151000_modified.cal
tool/Tools/Shared/4C-Probe-03-215-1006_VividE9_POLARIS/: E9_prb_4C.xml  VividE9_4C__20140115T150614.cal
tool/Tools/Shared/4V-Probe-32-175-0980_VividE9_POLARIS/: 32-105-0289_10-MHz-FPA.rom  E9_prb_4V.xml  Vivid E9_4V_20130301T175218.cal
tool/Tools/Shared/6S-Probe-32-105-0289_VividE9_POLARIS/: E9_prb_6S.xml_no_calibration
tool/Tools/Shared/9L-Probe-03-139-0425_VividE9_POLARIS/: E9_prb_9L.xml  Vivid E9_9L_20120710T113302.cal  Vivid E9_9L_20120710T120815.cal  Vivid E9_9L_20120710T133743.cal  Vivid E9_9L_20120710T220302.cal  Vivid E9_9L_20120710T221649.cal
tool/Tools/Shared/C5-2-Probe-32-175-0980_Ultrasonix_POLARIS/: SONIX_prb_C5-2.xml  Ultrasonix_C5-2__20131108T105210.cal
tool/Tools/Shared/L14-5-Probe-03-065-0153_Ultrasonix_POLARIS/: SONIX_prb_L14-5.xml  Ultrasonix_L14-5_03-065-0153.cal  Ultrasonix_L14-5_03-065-0153_20110325T103800.cal
tool/Tools/Shared/L14-5-Probe-03-215-1006_Ultrasonix_POLARIS/: SONIX_prb_L14-5.xml  Ultrasonix_L14-5.cal
tool/Tools/Shared/M12L-Probe-8700449_Vivid7-ISB_POLARIS/: Vivid7_prb_M12L.xml
tool/Tools/Shared/M12L-Probe-8700449_Vivid7-Karkirurgen_POLARIS/: Vivid7_M12L_8700449.stl  Vivid7_M12L_8700449_water.cal  Vivid7_prb_M12L.xml
tool/Tools/Shared/ML6-15-Probe-32-105-0289_VividE9_POLARIS/: E9_prb_ML6-15.xml  VividE9_ML6-15_20130415T114639.cal
tool/Tools/Shared/NDI-Pointer2_POLARIS/: NDI_pnt2.xml
tool/Tools/Shared/Ortho_11L-Probe-32-105-0289_VividE9_POLARIS/: 11L-Probe.stl  11L-Probe_backup.stl  E9_prb_11L.xml  Vivid_E9_11L.cal
tool/Tools/Shared/Ortho_4V-Probe-32-105-0289_VividE9_POLARIS/: 32-105-0289-ortho.rom  E9_prb_4V.xml  Vivid E9_4V.cal
tool/Tools/Shared/Ortho_6S-Probe-32-105-0289_VividE9_POLARIS/: E9_prb_6S.xml  Vivid E9_6S.cal
tool/Tools/Shared/Ortho_9L-Probe-32-105-0289_VividE9_POLARIS/: E9_prb_9L.xml  Vivid E9_9L.cal
tool/Tools/Shared/Ortho_L14-5-Probe-32-105-0289_Ultrasonix_POLARIS/: SONIX_prb_L14-5.xml  Ultrasonix_L14-5.cal
tool/Tools/Shared/Ortho_ML6-15-Probe-32-105-0289_VividE9_POLARIS/: E9_prb_ML6-15.xml
tool/Tools/Shared/Pointer2_AURORA_port3/: Pointer2_AURORA_port3.xml
tool/Tools/Shared/Reference-Plate_AURORA_port1/: Aurora_registration_frame.stl  Reference-Plate_AURORA_port1.xml
tool/Tools/Shared/Reference-Plate_AURORA_port2/: Reference-Plate_AURORA_port2.xml
tool/Tools/Shared/SURF-32-105-0289_Ultrasonix_POLARIS/: SURF-32-105-0289_Ultrasonix_POLARIS.xml  Ultrasonix_SURF_20121203T141056.cal
(+28 files in other folders)
